<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_Day"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/matchday_text"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/loading_widget_data"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_TeamHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/home_crest_image" />

            <TextView
                android:id="@+id/widget_score"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dip"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/black">
            </TextView>

            <ImageView
                android:id="@+id/imageView_TeamAway"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/away_crest_image"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_TeamHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/widget_GameTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/widget_TeamAway"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">

        <Button
            android:id="@+id/widget_NextButton"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/next_match_button"
            android:text="@string/next_match_button_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>